devops/projects/206-Kubernetes-Microservice-Phonebook/solution/resultserver-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: resultserver-deploy
  name: resultserver-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resultserver-deploy
  template:
    metadata:
      labels:
        app: resultserver-deploy
    spec:
      containers:
      - image: olivercw/resultserver
        name: resultserver
        ports:
        - containerPort: 80
        # env:
        # - name: MYSQL_PASSWORD
        #   # value: Clarusway_1
        # - name: MYSQL_USER
        #   value: Clarus
        # - name: MYSQL_DATABASE
        #   value: phonebook
        # - name: MYSQL_DATABASE_HOST  
        #   value: mysql
        
        resources: {}
