devops/projects/206-Kubernetes-Microservice-Phonebook/solution/resultserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: resultserver-svc
  name: resultserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30002
  selector:
    app: resultserver-deploy
  type: NodePort
