devops/projects/206-Kubernetes-Microservice-Phonebook/solution/webserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webserver-svc
  name: webserver-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 30001
  selector:
    app: webserver-deploy
  type: NodePort
